tests/integration/tests/check_commands/CHECK/one_string/negative-match/04-negative_match_no_input_lines_anymore/sample.itest
; RUN: %cat "%S/filecheck.input" | %expect_exit 1 %FILECHECK_EXEC "%S/filecheck.check" | %FILECHECK_TESTER_EXEC "%s" --strict-whitespace --match-full-lines

; CHECK:{{^.*}}filecheck.check:2:8: error: CHECK: expected string not found in input{{$}}
; CHECK:CHECK: String2
; CHECK:       ^
; CHECK:<stdin>:1:8: note: scanning from here
; CHECK:String1
; CHECK:       ^
; CHECK-EMPTY:
